[package]
name = "rfm69-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
defmt = "0.3"
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"


[dev-dependencies]
embedded-hal-mock = {version = "0.11.1", features = ["embedded-hal-async"]}
mockall = "0.13.1"
tokio = { version = "1", features = ["full"] }
