[package]
name = "rfm69-rs-examples-rp2040"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "transmitter"
path = "src/transmitter.rs"



[dependencies]
embassy-embedded-hal = { version = "0.2.0", features = ["defmt"] }
embassy-sync = { version = "0.6.0", features = ["defmt"] }
embassy-executor = { version = "0.6.3",  features = ["task-arena-size-98304", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-time = { version = "0.3.2", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.2.0",  features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl"] }

defmt = "0.3"
defmt-rtt = "0.4"

# cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m = { version = "0.7.7", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
critical-section = "1.1"
panic-probe = { version = "0.3", features = ["print-defmt"] }

portable-atomic = { version = "1.5", features = ["critical-section"] }
static_cell = "2.1.0"

rfm69-rs = { path = "../../rfm69-rs" }

[profile.release]
debug = 2

[profile.dev]
lto = true
opt-level = "z"
